-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.3.1
-
None
-
Mac OSX, Qt 5.3.1, iPhone 5 (7.1.1)
I updated to 5.3.1 using the Maintenance Tool. Since updating building my project with Positioning in it breaks for iOS. (It worked fine in 5.3.0) If I comment out the positioning in the pro file (and the places where I use things that depend on positioning in the code) the project will again run on iOS.
I get the following errors:
symbols(s) not found for architecture armv7
linker command failed with exit code 1 (use -v to see invocation)
Xcodebuild failed
in the compile output I see the following relevant lines
Undefined symbols for architecture armv7: "qt_static_plugin_IOSPositionPlugin()", referenced from: StaticIOSPositionPluginPluginInstance::StaticIOSPositionPluginPluginInstance() in proj_plugin_import.o "qt_static_plugin_PollPositionPlugin()", referenced from: StaticPollPositionPluginPluginInstance::StaticPollPositionPluginPluginInstance() in proj_plugin_import.o ld: symbol(s) not found for architecture armv7 clang: error: linker command failed with exit code 1 (use -v to see invocation) ... make[1]: *** [iphoneos-debug] Error 65 make: *** [debug-iphoneos] Error 2 12:09:26: The process "/usr/bin/make" exited with code 2. Error while building/deploying project testProj (kit: iphoneos-clang Qt 5.3.0 for iOS) When executing step 'Make'
even though the above error references (kit: iphoneos-clang Qt 5.3.0 for iOS) I am fairly sure that the maintenance tool just doesn't update the names and that everything is pointing to 5.3.1 correctly.
- resulted in
-
QTBUG-40198 Symbol clash when building app on ios using sensor and positioning module
-
- Closed
-
For Gerrit Dashboard: QTBUG-39843 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
88290,3 | Fix the names of the plugin factory classes for static plugin loading | 5.3 | qt/qtlocation | Status: MERGED | +2 | 0 |