Fix the names of the plugin factory classes for static plugin loading

This breaks positioning on IOS and any other statically build Qt
versions.

At the same time rename the positionpoll factory class to a more
appropriate name to avoid confusion.

[ChangeLog][QtPositioning] [iOS] Fixed link error of positioncl
and positionpoll plug-in.

Task-number: QTBUG-39843
Change-Id: Ic3d5687571cd9e7a531f9958675b895cf22ac13e
Reviewed-by: Fawzi Mohamed <fawzi.mohamed@digia.com>