src/plugins/geoservices/osm/osm.pro
@@ -2,7 +2,7 @@ TARGET = qtgeoservices_osm
 QT += location-private positioning-private network
 
 PLUGIN_TYPE = geoservices
-PLUGIN_CLASS_NAME = OSMGeoServicePlugin
+PLUGIN_CLASS_NAME = QGeoServiceProviderFactoryOsm
 load(qt_plugin)
 
 HEADERS += \
